# picoprog

./: Cargo.toml  Embed.toml  LICENSE  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  lint.yml  release.yml
src/: main.rs
